--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.0",
     "jsdom": "^22.1.0",
+    "mini-css-extract-plugin": "^2.7.6",
     "sass": "^1.68.0",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
